# gainr

./: .gitignore  README.md
.github/workflows/: build-and-deploy.yaml  build-images.yaml  deploy.yaml
applications/crypto-ingress/: Dockerfile  README.md  pyproject.toml  pytest.ini
applications/crypto-ingress/crypto_ingress/: candle_tracker.py  config.py  influxdb.py  influxdb_point_formats.py  kraken.py  mqtt.py  server.py
applications/crypto-ingress/crypto_ingress/scripts/: backfill_missing_data_from_api.py  bulk_index_into_influxdb.py  configure_buckets.py
applications/crypto-ingress/crypto_ingress/tests/: candle_tracker_data.py  conftest.py  test_ingressing_messages.py
applications/telesys-api/: Dockerfile  README.md  pyproject.toml
applications/telesys-api/telesys/: config.py  enums.py  influx_queries.py  mqtt.py  schema.py  server.py
helm/: helmfile.yaml  values.yaml
helm/crypto-ingress/: Chart.yaml  values.yaml
helm/crypto-ingress/templates/: _helper.tpl  delete-hook.yaml  deployment.yaml  upgrade-hook.yaml
helm/elk-stack/: elk-stack.yaml
helm/emqx-mqtt/: Chart.yaml  values.yaml
helm/emqx-mqtt/templates/: _helpers.tpl  emqx-ingress.yaml  emqx-mqtt.yaml  hook-generate-admin-password.yaml  hook-set-admin-password.yaml
helm/letsencrypt-traefik/: Chart.yaml
helm/letsencrypt-traefik/templates/: letsencrypt.yaml  traefik.yaml
helm/postgres/: Chart.yaml  values.yaml
helm/postgres/templates/: database.yaml
helm/telesys-api/: Chart.yaml  values.yaml
helm/telesys-api/templates/: _helper.tpl  deployment.yaml  ingress.yaml  service.yaml
